--- a/html/index.html
+++ b/html/index.html
@@ -32,7 +32,7 @@
             <li><a href="../html/about.html">Story</a></li>
             <li><a href="../html/menu.html">Menu</a></li>
             <li><a href="../html/news.html">News</a></li>
-            <li><a href="../html/contact.html">Contact</a></li>
+            <!-- <li><a href="../html/contact.html">Contact</a></li> -->
         </ul>
     </nav>
 
